added electron dependency and entry files with gitignore file

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "desktop"
   ],
   "author": "Shashank Shekhar",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "electron": "^2.0.5"
+  }
 }
