--- a/package.json
+++ b/package.json
@@ -16,7 +16,5 @@
   "devDependencies": {
     "electron": "^2.0.5"
   },
-  "dependencies": {
-    "offline-js": "^0.7.19"
-  }
+  "dependencies": {}
 }
